--- a/test.html
+++ b/test.html
@@ -1,53 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
+    <!-- Книга 1 (нижняя) -->
+    <rect x="100" y="320" width="312" height="50" fill="#8B4513" stroke="#000" stroke-width="2" />
+    <rect x="102" y="325" width="308" height="40" fill="#D2691E" />
+    <line x1="102" y1="330" x2="410" y2="330" stroke="#FFF" stroke-width="2" />
+    <line x1="102" y1="335" x2="410" y2="335" stroke="#FFF" stroke-width="2" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ссылка-кнопка с поиском</title>
-    <style>
-        /* Стили для ссылки-кнопки */
-        .search-link {
-            display: inline-flex;
-            align-items: center;
-            padding: 8px 16px;
-            font-size: 16px;
-            font-family: Arial, sans-serif;
-            color: white;
-            text-decoration: none;
-            background-color: #007BFF;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    <!-- Книга 2 (средняя) -->
+    <rect x="110" y="270" width="312" height="50" fill="#4682B4" stroke="#000" stroke-width="2" />
+    <rect x="112" y="275" width="308" height="40" fill="#5F9EA0" />
+    <line x1="112" y1="280" x2="420" y2="280" stroke="#FFF" stroke-width="2" />
+    <line x1="112" y1="285" x2="420" y2="285" stroke="#FFF" stroke-width="2" />
 
-        .search-link:hover {
-            background-color: #0056b3;
-        }
+    <!-- Книга 3 (верхняя) -->
+    <rect x="120" y="220" width="312" height="50" fill="#6A5ACD" stroke="#000" stroke-width="2" />
+    <rect x="122" y="225" width="308" height="40" fill="#7B68EE" />
+    <line x1="122" y1="230" x2="430" y2="230" stroke="#FFF" stroke-width="2" />
+    <line x1="122" y1="235" x2="430" y2="235" stroke="#FFF" stroke-width="2" />
 
-        .search-link svg {
-            width: 20px;
-            height: 20px;
-            fill: white;
-            margin-right: 8px;
-            /* Отступ между иконкой и текстом */
-        }
-
-        .search-link:focus {
-            outline: none;
-        }
-    </style>
-</head>
-
-<body>
-    <a href="#" class="search-link">
-        <!-- SVG иконка лупы -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path
-                d="M10 2a8 8 0 105.29 14.71l5 5a1 1 0 001.42-1.42l-5-5A8 8 0 0010 2zm0 2a6 6 0 110 12A6 6 0 0110 4z" />
-        </svg>
-        Искать
-    </a>
-</body>
-
-</html>
+    <!-- Тени -->
+    <rect x="100" y="370" width="312" height="10" fill="rgba(0, 0, 0, 0.3)" />
+    <rect x="110" y="320" width="312" height="10" fill="rgba(0, 0, 0, 0.3)" />
+    <rect x="120" y="270" width="312" height="10" fill="rgba(0, 0, 0, 0.3)" />
+</svg>
